--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "typescript": "~4.5.4"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.8.0",
     "antd": "^5.1.1",
     "electron-cgi": "^1.0.6",
     "electron-squirrel-startup": "^1.0.0",
